--- a/UE_3/UE3_Ewinger_Benischke/app/src/main/res/layout/activity_main.xml
+++ b/UE_3/UE3_Ewinger_Benischke/app/src/main/res/layout/activity_main.xml
@@ -23,4 +23,19 @@
     app:layout_constraintVertical_bias="0.463"
     tools:ignore="MissingConstraints" />
 
+    <Button
+        android:id="@+id/btnAct2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:onClick="onButtonClick"
+        android:padding="12dp"
+        android:text="Switch to Activity 2"
+        android:textColor="@color/white"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editText" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
