--- a/UE_3/UE3_Ewinger_Benischke/app/src/main/res/layout/activity_main.xml
+++ b/UE_3/UE3_Ewinger_Benischke/app/src/main/res/layout/activity_main.xml
@@ -36,6 +36,24 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText" />
+        app:layout_constraintTop_toBottomOf="@+id/editText"
+        app:layout_constraintVertical_bias="0.221" />
+
+    <Button
+        android:id="@+id/btnSwitchActivityService"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:onClick="onButtonClickSwitchToService"
+        android:padding="12dp"
+        android:text="Switch to Activity Service"
+        android:textColor="@color/white"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnAct2" />
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
