--- a/UE_3/UE3_Ewinger_Benischke/app/src/main/res/layout/activity_main.xml
+++ b/UE_3/UE3_Ewinger_Benischke/app/src/main/res/layout/activity_main.xml
@@ -52,7 +52,23 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnAct2" />
+        app:layout_constraintTop_toBottomOf="@+id/btnAct2"
+        app:layout_constraintVertical_bias="0.191" />
+
+    <Button
+        android:id="@+id/btnSwitchActivityHost"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:onClick="onButtonClickSwitchToHost"
+        android:padding="12dp"
+        android:text="Switch to Activity Host"
+        android:textColor="@color/white"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnSwitchActivityService" />
 
 
 
