--- a/UE_3/UE3_Ewinger_Benischke/app/src/main/res/layout/fragment_a.xml
+++ b/UE_3/UE3_Ewinger_Benischke/app/src/main/res/layout/fragment_a.xml
@@ -3,17 +3,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".FragmentA"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/orange">
+    android:paddingTop="20dp"
+    tools:context=".FragmentA">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
-        android:id="@+id/textView1"
-        android:layout_width="match_parent" android:layout_height="wrap_content"
-        android:text="Hello Fragment A"
-        app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
-        android:textAlignment="center" android:textColor="@color/white"/>
+        android:id="@+id/textViewA"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingTop="20dp"
+        android:text="@string/FragmentA"
+        android:textAlignment="center"
+        android:textSize="24sp" />
 
 </FrameLayout>
