--- a/UE_3/UE3_Ewinger_Benischke/app/src/main/res/layout/activity_main.xml
+++ b/UE_3/UE3_Ewinger_Benischke/app/src/main/res/layout/activity_main.xml
@@ -6,70 +6,67 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <EditText
-    android:id="@+id/editText"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:hint="Street Address"
-    android:inputType="text"
-    android:maxLines="1"
-    android:padding="16dp"
-    android:textSize="16sp"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintHorizontal_bias="1.0"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent"
-    app:layout_constraintVertical_bias="0.463"
-    tools:ignore="MissingConstraints" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:paddingTop="60dp">
 
-    <Button
-        android:id="@+id/btnAct2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:onClick="onButtonClick"
-        android:padding="12dp"
-        android:text="Switch to Activity 2"
-        android:textColor="@color/white"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText"
-        app:layout_constraintVertical_bias="0.221" />
+        <EditText
+            android:id="@+id/editText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Street Address"
+            android:inputType="text"
+            android:maxLines="1"
+            android:padding="16dp"
+            android:textSize="16sp"
+            tools:ignore="MissingConstraints" />
 
-    <Button
-        android:id="@+id/btnSwitchActivityService"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:onClick="onButtonClickSwitchToService"
-        android:padding="12dp"
-        android:text="Switch to Activity Service"
-        android:textColor="@color/white"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnAct2"
-        app:layout_constraintVertical_bias="0.191" />
+        <Button
+            android:id="@+id/btnAct2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:onClick="onButtonClick"
+            android:padding="12dp"
+            android:text="Switch to Activity 2"
+            android:textColor="@color/white"
+            android:textSize="18sp" />
 
-    <Button
-        android:id="@+id/btnSwitchActivityHost"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:onClick="onButtonClickSwitchToHost"
-        android:padding="12dp"
-        android:text="Switch to Activity Host"
-        android:textColor="@color/white"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnSwitchActivityService" />
+        <Button
+            android:id="@+id/btnSwitchActivityService"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:onClick="onButtonClickSwitchToService"
+            android:padding="12dp"
+            android:text="Switch to Activity Service"
+            android:textColor="@color/white"
+            android:textSize="18sp" />
 
+        <Button
+            android:id="@+id/btnSwitchActivityHost"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:onClick="onButtonClickSwitchToHost"
+            android:padding="12dp"
+            android:text="Switch to Activity Host"
+            android:textColor="@color/white"
+            android:textSize="18sp" />
+
+        <Button
+            android:id="@+id/btnSwitchToTouchGame"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:onClick="onButtonClickSwitchToTouchGame"
+            android:padding="12dp"
+            android:text="Switch to Touch Game"
+            android:textColor="@color/white"
+            android:textSize="18sp" />
+    </LinearLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
