--- a/UE_4/app/src/main/res/layout/activity_main.xml
+++ b/UE_4/app/src/main/res/layout/activity_main.xml
@@ -4,14 +4,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
     android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:id="@+id/txtView_Fingers"
-        android:layout_height="wrap_content"
-        android:text="Finger Counter" />
+    <com.example.ue4_ewinger_benischke.SingleTouchView
+        android:id="@+id/singleTouchView"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        tools:ignore="MissingClass" />
+
+    <com.example.ue4_ewinger_benischke.MultiTouchView
+        android:id="@+id/multiTouchView"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1" />
 
 </LinearLayout>
