--- a/UE_4/app/src/main/res/layout/activity_main.xml
+++ b/UE_4/app/src/main/res/layout/activity_main.xml
@@ -20,4 +20,32 @@
         android:layout_height="0dp"
         android:layout_weight="1" />
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/btnLayout"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:text="2 Layout" />
+
+        <Button
+            android:id="@+id/btnConstraint"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:text="3 ConstraintLayout" />
+
+        <Button
+            android:id="@+id/btnWebBrowser"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:text="4 personal Web Browser" />
+
+    </LinearLayout>
+
 </LinearLayout>
