--- a/UE_4/app/src/main/res/layout/activity_info.xml
+++ b/UE_4/app/src/main/res/layout/activity_info.xml
@@ -19,6 +19,7 @@
             android:layout_marginTop="16dp"
             android:contentDescription="TODO"
             android:scaleType="centerCrop"
+            android:layout_weight="1"
             android:src="@drawable/bwljustus"
             app:layout_constraintBottom_toTopOf="@id/app_name"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -73,9 +74,8 @@
                 android:id="@+id/social_media_icon_1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/description"
-                android:layout_alignParentStart="true"
                 android:layout_marginTop="16dp"
+                android:layout_weight="1"
                 android:contentDescription="Social Media Icon 1"
                 android:src="@drawable/facebook"/>
 
@@ -83,9 +83,8 @@
                 android:id="@+id/social_media_icon_2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/description"
-                android:layout_centerHorizontal="true"
                 android:layout_marginTop="16dp"
+                android:layout_weight="1"
                 android:contentDescription="Social Media Icon 2"
                 android:src="@drawable/twitter"/>
 
@@ -93,9 +92,8 @@
                 android:id="@+id/social_media_icon_3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/description"
-                android:layout_alignParentEnd="true"
                 android:layout_marginTop="16dp"
+                android:layout_weight="1"
                 android:contentDescription="Social Media Icon 3"
                 android:src="@drawable/instagram"/>
 
@@ -103,22 +101,23 @@
                 android:id="@+id/email_icon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/social_media_icon_1"
-                android:layout_centerHorizontal="true"
                 android:layout_marginTop="16dp"
+                android:layout_weight="1"
                 android:contentDescription="Email Icon"
                 android:src="@drawable/mail"/>
         </LinearLayout>
+
 
         <ImageButton
             android:id="@+id/btnExit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Button"
+            android:src="@drawable/close"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_margin="16dp"
-            android:src="@drawable/close"/>
+            tools:ignore="SpeakableTextPresentCheck" />
+
+
 
         <!-- Email icon -->
 
