--- a/UE_4/app/src/main/res/layout/activity_layout.xml
+++ b/UE_4/app/src/main/res/layout/activity_layout.xml
@@ -109,7 +109,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#white"
+        android:background="@color/white"
         android:orientation="horizontal">
 
         <GridLayout
@@ -251,7 +251,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#white"
+            android:background="@color/white"
             android:orientation="horizontal">
 
             <GridLayout
@@ -393,7 +393,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#white"
+            android:background="@color/white"
             android:orientation="horizontal">
 
             <GridLayout
