--- a/UE_4/app/src/main/res/layout/activity_main.xml
+++ b/UE_4/app/src/main/res/layout/activity_main.xml
@@ -37,7 +37,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="ConstraintLayout" />
+            android:text="About" />
 
         <Button
             android:id="@+id/btnWebBrowser"
