--- a/UE_5/UE5_Ewinger_Benischke/app/src/main/res/layout/activity_measurement_units.xml
+++ b/UE_5/UE5_Ewinger_Benischke/app/src/main/res/layout/activity_measurement_units.xml
@@ -4,6 +4,149 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MeasurementUnits">
+    tools:context=".MainActivity">
 
+    <Button
+        android:id="@+id/px"
+        android:layout_width="221px"
+        android:layout_height="221px"
+        android:text="px"
+        app:layout_constraintBottom_toTopOf="@+id/button2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/textViewPx"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="0.5in"
+        android:layout_height="0.5in"
+        android:text="in"
+        app:layout_constraintBottom_toTopOf="@+id/mm"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/textViewIn"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/px" />
+
+    <Button
+        android:id="@+id/mm"
+        android:layout_width="12.7mm"
+        android:layout_height="12.7mm"
+        android:text="mm"
+        app:layout_constraintBottom_toTopOf="@+id/pt"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/textViewMM"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button2" />
+
+    <Button
+        android:id="@+id/pt"
+        android:layout_width="36pt"
+        android:layout_height="36pt"
+        android:text="pt"
+        app:layout_constraintBottom_toTopOf="@+id/dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/textViewPT"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/mm" />
+
+    <Button
+        android:id="@+id/dp"
+        android:layout_width="84dp"
+        android:layout_height="84dp"
+        android:text="dp"
+        app:layout_constraintBottom_toTopOf="@+id/sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/textViewDP"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/pt" />
+
+    <Button
+        android:id="@+id/sp"
+        android:layout_width="84sp"
+        android:layout_height="84sp"
+        android:text="sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/textViewSP"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/dp" />
+
+    <TextView
+        android:id="@+id/textViewPT"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Test pt"
+        android:textSize="11pt"
+        app:layout_constraintBottom_toTopOf="@+id/textViewDP"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/pt"
+        app:layout_constraintTop_toBottomOf="@+id/textViewMM" />
+
+    <TextView
+        android:id="@+id/textViewMM"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Test mm"
+        android:textSize="4mm"
+        app:layout_constraintBottom_toTopOf="@+id/textViewPT"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/mm"
+        app:layout_constraintTop_toBottomOf="@+id/textViewIn" />
+
+    <TextView
+        android:id="@+id/textViewPx"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Test px"
+        android:textSize="70px"
+        app:layout_constraintBottom_toTopOf="@+id/textViewIn"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/px"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textViewIn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Test in"
+        android:textSize="0.16in"
+        app:layout_constraintBottom_toTopOf="@+id/textViewMM"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/button2"
+        app:layout_constraintTop_toBottomOf="@+id/textViewPx" />
+
+    <TextView
+        android:id="@+id/textViewDP"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Test dp"
+        android:textSize="26dp"
+        app:layout_constraintBottom_toTopOf="@+id/textViewSP"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/dp"
+        app:layout_constraintTop_toBottomOf="@+id/textViewPT" />
+
+    <TextView
+        android:id="@+id/textViewSP"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Test sp"
+        android:textSize="26sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/sp"
+        app:layout_constraintTop_toBottomOf="@+id/textViewDP" />
 </androidx.constraintlayout.widget.ConstraintLayout>
