--- a/UE_6_EwingerBenischke/app/src/main/res/layout-land-mdpi/television_layout.xml
+++ b/UE_6_EwingerBenischke/app/src/main/res/layout-land-mdpi/television_layout.xml
@@ -13,6 +13,7 @@
         android:id="@+id/logo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@+id/app_name"
         app:layout_constraintStart_toStartOf="parent"
@@ -39,7 +40,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="About"
-        android:textSize="20sp"
+        android:textSize="40sp"
         android:textStyle="bold"
         android:textColor="@color/black"
         app:layout_constraintBottom_toTopOf="@+id/description"
@@ -53,7 +54,7 @@
         android:layout_height="wrap_content"
         android:text="@string/lorem_ipsum"
         android:textAlignment="center"
-        android:textSize="20sp"
+        android:textSize="30sp"
         android:textColor="@color/black"
         app:layout_constraintBottom_toTopOf="@id/facebook_icon"
         app:layout_constraintEnd_toEndOf="parent"
@@ -63,6 +64,10 @@
 
     <ImageButton
         android:id="@+id/facebook_icon"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="10dp"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="@null"
@@ -79,6 +84,10 @@
 
     <ImageButton
         android:id="@+id/twitter_icon"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginBottom="10dp"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="@null"
@@ -95,6 +104,10 @@
     <ImageButton
         android:id="@+id/instagram_icon"
         android:layout_width="0dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginBottom="10dp"
         android:layout_height="0dp"
         android:background="@null"
         android:contentDescription="Social Media Icon 3"
@@ -111,6 +124,10 @@
     <ImageButton
         android:id="@+id/email_icon"
         android:layout_width="0dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="10dp"
         android:layout_height="0dp"
         android:background="@null"
         android:contentDescription="Email Icon"
