--- a/UE_6_EwingerBenischke/app/src/main/res/layout/activity_task1.xml
+++ b/UE_6_EwingerBenischke/app/src/main/res/layout/activity_task1.xml
@@ -16,6 +16,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintVertical_chainStyle="packed"
         app:layout_constraintVertical_bias="0.5"
+        android:layout_marginTop="10dp"
         app:srcCompat="@drawable/bwljustus" />
 
     <ImageButton
@@ -61,6 +62,8 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="@null"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="5dp"
         android:contentDescription="Social Media Icon 1"
         android:scaleType="fitCenter"
         android:src="@drawable/facebook"
@@ -79,6 +82,9 @@
         android:background="@null"
         android:contentDescription="Social Media Icon 2"
         android:scaleType="fitCenter"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="2.5dp"
         android:src="@drawable/twitter"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/instagram_icon"
@@ -92,9 +98,12 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="@null"
+        android:layout_marginTop="10dp"
         android:contentDescription="Social Media Icon 3"
         android:scaleType="fitCenter"
         android:src="@drawable/instagram"
+        android:layout_marginRight="5dp"
+        android:layout_marginLeft="2.5dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/email_icon"
         app:layout_constraintHorizontal_bias="0.5"
@@ -111,6 +120,8 @@
         android:contentDescription="Email Icon"
         android:scaleType="fitCenter"
         android:src="@drawable/mail"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
