--- a/UE_6_EwingerBenischke/app/src/main/res/layout-sw320dp-small/small_layout.xml
+++ b/UE_6_EwingerBenischke/app/src/main/res/layout-sw320dp-small/small_layout.xml
@@ -10,8 +10,9 @@
 
     <ImageView
         android:id="@+id/logo"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="130dp"
+        android:layout_height="130dp"
+        android:layout_marginTop="5dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@+id/app_name"
         app:layout_constraintStart_toStartOf="parent"
@@ -51,7 +52,7 @@
         android:layout_height="wrap_content"
         android:text="@string/lorem_ipsum"
         android:textAlignment="center"
-        android:textSize="20sp"
+        android:textSize="17sp"
         app:layout_constraintBottom_toTopOf="@id/facebook_icon"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -65,6 +66,7 @@
         android:background="@null"
         android:contentDescription="Social Media Icon 1"
         android:scaleType="fitCenter"
+        android:layout_marginLeft="5dp"
         android:src="@drawable/facebook"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/twitter_icon"
@@ -82,6 +84,8 @@
         android:contentDescription="Social Media Icon 2"
         android:scaleType="fitCenter"
         android:src="@drawable/twitter"
+        android:layout_marginLeft="2.5dp"
+        android:layout_marginRight="2dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/instagram_icon"
         app:layout_constraintHorizontal_bias="0.5"
@@ -97,6 +101,8 @@
         android:contentDescription="Social Media Icon 3"
         android:scaleType="fitCenter"
         android:src="@drawable/instagram"
+        android:layout_marginRight="2.5dp"
+        android:layout_marginLeft="2dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/email_icon"
         app:layout_constraintHorizontal_bias="0.5"
@@ -113,6 +119,7 @@
         android:contentDescription="Email Icon"
         android:scaleType="fitCenter"
         android:src="@drawable/mail"
+        android:layout_marginRight="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
