--- a/UE8/app/src/main/res/values/themes.xml
+++ b/UE8/app/src/main/res/values/themes.xml
@@ -1,7 +1,7 @@
 
 <resources xmlns:tools="http://schemas.android.com/tools">
 <!-- Base application theme. -->
-<style name="Base.Theme.UE8_Ewinger_Benischke" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+<style name="Base.Theme.UE8_Ewinger_Benischke" parent="Theme.MaterialComponents.DayNight.NoActionBar">
     <!-- Primary brand color. -->
     <item name="colorPrimary">@color/purple_500</item>
     <item name="colorPrimaryVariant">@color/purple_700</item>
