--- a/UE8/app/src/main/res/layout/activity_task1.xml
+++ b/UE8/app/src/main/res/layout/activity_task1.xml
@@ -1,73 +1,116 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".Task1">
 
-    <!-- Apply Style 1: GreenThemeStyle to a TextView -->
-    <TextView
-        android:id="@+id/textView"
-        style="@style/GreenThemeStyle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello, World!"
-        android:textSize="50dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <TextView
-        android:id="@+id/textView2"
-        style="@style/BlueThemeStyle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello, World!"
-        android:textSize="50dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.655"/>
+    <data>
+        <variable
+            name="viewModel"
+            type="com.example.ue8_ewinger_benischke.MainViewModel" />
+    </data>
 
-    <RadioGroup
-        android:id="@+id/idRGgroup"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/textView2"
-        android:orientation="vertical"
-        android:padding="4dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.881">
+        android:orientation="vertical">
 
-        <!--radio button for light theme-->
-        <RadioButton
-            android:id="@+id/idRBLight"
+        <Spinner
+            android:id="@+id/unit_Spinner"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:entries="@array/units"
+            style="@style/BlueThemeStyle"
+            android:minHeight="48dp" />
+
+        <TextView
+            android:id="@+id/convertFrom"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="convert from" />
+
+        <Spinner
+            android:id="@+id/spinnerFrom"
+            android:layout_width="match_parent"
+            style="@style/BlueThemeStyle"
+            android:layout_height="wrap_content"
+            android:minHeight="48dp" />
+
+        <TextView
+            android:id="@+id/convertTo"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="convert to" />
+
+        <Spinner
+            android:id="@+id/spinnerTo"
+            android:layout_width="match_parent"
+            style="@style/BlueThemeStyle"
+            android:layout_height="wrap_content"
+            android:minHeight="48dp" />
+
+        <TextView
+            android:id="@+id/input_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_margin="5dp"
-            android:padding="5dp"
-            android:text="Light" />
+            android:text="Input Value:" />
 
-        <!--radio button for dark theme-->
-        <RadioButton
-            android:id="@+id/idRBDark"
+        <EditText
+            android:id="@+id/input_field"
+            android:layout_width="match_parent"
+            style="@style/EditTextInput"
+            android:layout_height="wrap_content"
+            android:hint="Input your value here"
+            android:inputType="numberDecimal"
+            android:minHeight="48dp"
+            android:text="@{viewModel.userNumber}"
+            android:textSize="24sp" />
+
+        <TextView
+            android:id="@+id/output_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_margin="5dp"
-            android:layout_weight="1"
-            android:padding="5dp"
-            android:text="Dark" />
+            android:text="Output Value:" />
 
-    </RadioGroup>
+        <TextView
+            android:id="@+id/output_field"
+            style="@style/EditTextOutput"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Your output value"
+            android:minHeight="48dp"
+            android:text="@{viewModel.userNumber}"
+            android:textSize="24sp" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <RadioGroup
+            android:id="@+id/idRGgroup"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="4dp">
+
+            <!--radio button for light theme-->
+            <RadioButton
+                android:id="@+id/idRBLight"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_margin="5dp"
+                android:padding="5dp"
+                style="@style/RadioButton"
+                android:text="Light Theme" />
+
+            <!--radio button for dark theme-->
+            <RadioButton
+                android:id="@+id/idRBDark"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_margin="5dp"
+                android:layout_weight="1"
+                style="@style/RadioButton"
+                android:padding="5dp"
+                android:text="Dark Theme" />
+
+        </RadioGroup>
+
+    </LinearLayout>
+</layout>
