--- a/UE8/app/src/main/res/values-night/colors.xml
+++ b/UE8/app/src/main/res/values-night/colors.xml
@@ -7,6 +7,6 @@
     <color name="teal_700">#00796B</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="textColor">#FFFFFFFF</color>
-    <color name="radioButton">#6666ff</color>
+    <color name="textColor">#FF000000</color>
+    <color name="radioButton">#ffa500</color>
 </resources>
