--- a/UE8/app/src/main/res/values/styles.xml
+++ b/UE8/app/src/main/res/values/styles.xml
@@ -1,14 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="GreenThemeStyle">
-        <item name="android:background">#00FF00</item>
-        <item name="android:textColor">#FFFFFF</item>
-        <item name="android:textSize">16sp</item>
+    <style name="EditTextInput">
+        <item name="android:textColor">@color/teal_200</item>
+    </style>
+
+    <style name="EditTextOutput">
+        <item name="android:textColor">@color/green_500</item>
     </style>
 
     <style name="BlueThemeStyle">
-        <item name="android:background">#0000FF</item>
+        <item name="android:background">@color/teal_200</item>
         <item name="android:textColor">#000000</item>
         <item name="android:textSize">14sp</item>
+    </style>
+
+    <style name="RadioButton">
+        <item name="android:buttonTint">@color/radioButton</item>
     </style>
 </resources>
