--- a/UE8/app/src/main/res/values/themes.xml
+++ b/UE8/app/src/main/res/values/themes.xml
@@ -2,18 +2,22 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
 <!-- Base application theme. -->
 <style name="Base.Theme.UE8_Ewinger_Benischke" parent="Theme.MaterialComponents.DayNight.NoActionBar">
-    <!-- Primary brand color. -->
-    <item name="colorPrimary">@color/purple_500</item>
-    <item name="colorPrimaryVariant">@color/purple_700</item>
+    <!--   Color for the app bar and other primary UI elements. -->
+    <item name="colorPrimary">@color/green_157</item>
+    <item name="colorPrimaryVariant">@color/green_700</item>
     <item name="colorOnPrimary">@color/white</item>
-    <!-- Secondary brand color. -->
+    <!--   A darker variant of the primary color, used for
+           the status bar (on Android 5.0+) and contextual app bars. -->
     <item name="colorSecondary">@color/teal_200</item>
     <item name="colorSecondaryVariant">@color/teal_700</item>
     <item name="colorOnSecondary">@color/black</item>
     <!--below is the text color-->
     <item name="android:textColor">@color/black</item>
+    <item name="android:button">@style/BlueThemeStyle</item>
     <!-- Status bar color. -->
     <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
     <!-- Customize your theme here. -->
 </style>
 </resources>
+
+
